syntax = "proto3";

package Muwesome.Rpc.ConnectServer;

service GameServerRegistrar {
  rpc RegisterGameServer (stream GameServerRequest) returns (GameServerRegisterResponse);
}

message GameServerRequest {
  message Register {
    uint32 code = 1;
    string host = 2;
    uint32 port = 3;
    StatusUpdate status = 4;
  }

  message StatusUpdate {
    uint32 client_count = 1;
    uint32 client_capacity = 2;
  }

  oneof type {
    Register register = 1;
    StatusUpdate status = 2;
  }
}

message GameServerRegisterResponse {
}
